--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,11 @@
-NODE_ENV=development
-PORT=3001
+# Example .env configuration for Multi-LLM Support
+# Copy this to your .env file and add your API keys
 
-# Database
-DATABASE_URL="file:./dev.db"
+# LLM Provider API Keys
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
+OPENAI_API_KEY=sk-your-openai-key-here
+GEMINI_API_KEY=AIzaSyC5lDtVdsib3oORHbTlSUJloiiTlczcjLk
 
-# Redis
-REDIS_URL="redis://localhost:6379"
-
-# JWT
-JWT_SECRET="your-secret-key-change-in-production"
-JWT_EXPIRES_IN="7d"
-
-# MCP Servers
-MCP_FILESYSTEM_PATH="./mcp-servers/filesystem"
-MCP_GIT_PATH="./mcp-servers/git"
-MCP_BROWSER_PATH="./mcp-servers/browser"
-
-# Logging
-LOG_LEVEL="debug"
+# Global LLM Priority (comma-separated, first = highest priority)
+# Options: anthropic, openai, gemini
+LLM_PRIORITY=anthropic,gemini,openai
