--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ pyyaml>=6.0
 
 # Logging and monitoring
 # (To be added as needed)
+
+# AI/LLM Providers
+anthropic>=0.40.0
+openai>=1.0.0
+google-genai>=0.2.0
