--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -18,6 +18,7 @@
         "clsx": "^2.0.0",
         "date-fns": "^4.1.0",
         "framer-motion": "^10.16.4",
+        "html2pdf.js": "^0.12.1",
         "lucide-react": "^0.284.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
