--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
         "redis": "^4.6.11",
         "simple-git": "^3.30.0",
         "socket.io": "^4.6.1",
